--- a/PetSupportApp/View/Schedule.storyboard
+++ b/PetSupportApp/View/Schedule.storyboard
@@ -389,7 +389,7 @@
                                                         <color key="textColor" red="0.72156862749999995" green="0.047058823530000002" blue="0.78823529410000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
-                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="siv-f8-K8n">
+                                                    <button opaque="NO" tag="4" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="siv-f8-K8n">
                                                         <rect key="frame" x="324" y="8" width="30" height="30"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="30" id="N5L-Sx-C6q"/>
@@ -876,24 +876,13 @@
                                                                 <rect key="frame" x="20" y="2" width="334" height="46"/>
                                                                 <subviews>
                                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jmP-3K-dsC">
-                                                                        <rect key="frame" x="0.0" y="0.0" width="157" height="46"/>
+                                                                        <rect key="frame" x="0.0" y="0.0" width="334" height="46"/>
                                                                         <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
                                                                         <state key="normal" title="Cancel">
                                                                             <color key="titleColor" red="0.9027213784" green="0.16736618789999999" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                                         </state>
                                                                         <connections>
                                                                             <action selector="cancelButtonAction:" destination="WyM-IT-6hb" eventType="touchUpInside" id="d1Z-PK-4Mp"/>
-                                                                        </connections>
-                                                                    </button>
-                                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UQa-Pu-lGd">
-                                                                        <rect key="frame" x="177" y="0.0" width="157" height="46"/>
-                                                                        <color key="backgroundColor" red="0.90196078431372551" green="0.16862745098039217" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
-                                                                        <state key="normal" title="Edit">
-                                                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                                        </state>
-                                                                        <connections>
-                                                                            <action selector="editButtonAction:" destination="WyM-IT-6hb" eventType="touchUpInside" id="UuB-Ym-17j"/>
                                                                         </connections>
                                                                     </button>
                                                                 </subviews>
@@ -980,8 +969,8 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="animalImage" destination="d9u-bL-H6x" id="8HX-mW-8q0"/>
                         <outlet property="btnCancel" destination="jmP-3K-dsC" id="wbJ-Hz-frh"/>
-                        <outlet property="btnEdit" destination="UQa-Pu-lGd" id="J7y-Ib-6PO"/>
                         <outlet property="lblDate" destination="vit-qY-HvA" id="FWP-Z3-9Qd"/>
                         <outlet property="lblEndTimeTitle" destination="CCl-0C-fUG" id="gcM-Q6-yBX"/>
                         <outlet property="lblEndtime" destination="Gq5-G5-Ucn" id="Ht7-KK-Elc"/>
@@ -1481,6 +1470,7 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="animalImage" destination="25a-xK-ycB" id="QXv-EB-Anv"/>
                         <outlet property="btnCancel" destination="oYu-cV-j2w" id="fqk-qC-9AT"/>
                         <outlet property="btnEdit" destination="fJo-pr-Sj0" id="0A4-jU-UwH"/>
                         <outlet property="lblDate" destination="CG3-cw-ukU" id="sZa-r3-E8S"/>
