--- a/PetSupportApp/View/Schedule.storyboard
+++ b/PetSupportApp/View/Schedule.storyboard
@@ -22,6 +22,31 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="favouriteNew" translatesAutoresizingMaskIntoConstraints="NO" id="E9L-RY-QYM">
+                                <rect key="frame" x="87" y="365" width="240" height="166"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="166" id="rTW-Qw-G3j"/>
+                                    <constraint firstAttribute="width" constant="240" id="wGA-xt-hyj"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Add your schedule to the list and get new information about them" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QZb-pt-B3N">
+                                <rect key="frame" x="12" y="581" width="382" height="54"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="54" id="dZJ-H5-y3U"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
+                                <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No schedule pet yet" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Feg-By-rGo">
+                                <rect key="frame" x="12" y="551" width="382" height="20"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="20" id="xqU-Cn-exP"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="GFz-W4-zjf">
                                 <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -245,10 +270,18 @@
                         <viewLayoutGuide key="safeArea" id="PEc-Hb-17o"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="PEc-Hb-17o" firstAttribute="trailing" secondItem="Feg-By-rGo" secondAttribute="trailing" constant="20" id="155-Xz-FQD"/>
+                            <constraint firstItem="QZb-pt-B3N" firstAttribute="leading" secondItem="PEc-Hb-17o" secondAttribute="leading" constant="12" id="1yl-T9-Bqn"/>
+                            <constraint firstItem="E9L-RY-QYM" firstAttribute="centerX" secondItem="b0U-Ej-QeH" secondAttribute="centerX" id="BQo-98-exv"/>
                             <constraint firstItem="PEc-Hb-17o" firstAttribute="bottom" secondItem="GFz-W4-zjf" secondAttribute="bottom" id="CK0-xN-Iez"/>
                             <constraint firstItem="GFz-W4-zjf" firstAttribute="leading" secondItem="PEc-Hb-17o" secondAttribute="leading" id="QgI-NN-pAj"/>
                             <constraint firstItem="PEc-Hb-17o" firstAttribute="trailing" secondItem="GFz-W4-zjf" secondAttribute="trailing" id="Y9p-IP-IEc"/>
+                            <constraint firstItem="Feg-By-rGo" firstAttribute="leading" secondItem="PEc-Hb-17o" secondAttribute="leading" constant="12" id="aVh-ac-pe9"/>
+                            <constraint firstItem="PEc-Hb-17o" firstAttribute="trailing" secondItem="QZb-pt-B3N" secondAttribute="trailing" constant="20" id="dTc-i8-FyP"/>
                             <constraint firstItem="GFz-W4-zjf" firstAttribute="top" secondItem="PEc-Hb-17o" secondAttribute="top" id="geu-p7-HN7"/>
+                            <constraint firstItem="Feg-By-rGo" firstAttribute="top" secondItem="E9L-RY-QYM" secondAttribute="bottom" constant="20" id="je9-Ic-UBv"/>
+                            <constraint firstItem="E9L-RY-QYM" firstAttribute="centerY" secondItem="b0U-Ej-QeH" secondAttribute="centerY" id="lpi-DF-3OQ"/>
+                            <constraint firstItem="QZb-pt-B3N" firstAttribute="top" secondItem="Feg-By-rGo" secondAttribute="bottom" constant="10" id="vab-LV-HGs"/>
                         </constraints>
                     </view>
                     <connections>
@@ -278,44 +311,11 @@
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="VjX-tI-hie">
                                         <rect key="frame" x="20" y="70" width="374" height="220"/>
                                         <subviews>
-                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="N6S-Xn-CcH">
-                                                <rect key="frame" x="0.0" y="0.0" width="374" height="46"/>
-                                                <subviews>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="VIEW SHEDULE" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q7p-Y1-dZ0">
-                                                        <rect key="frame" x="10" y="8" width="294" height="30"/>
-                                                        <constraints>
-                                                            <constraint firstAttribute="height" constant="30" id="75E-Ys-Wc1"/>
-                                                        </constraints>
-                                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="20"/>
-                                                        <color key="textColor" red="0.72156862749999995" green="0.047058823530000002" blue="0.78823529410000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                                        <nil key="highlightedColor"/>
-                                                    </label>
-                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5vI-oW-GM8">
-                                                        <rect key="frame" x="324" y="8" width="30" height="30"/>
-                                                        <constraints>
-                                                            <constraint firstAttribute="height" constant="30" id="aEY-l6-int"/>
-                                                            <constraint firstAttribute="width" constant="30" id="jda-jA-2oR"/>
-                                                        </constraints>
-                                                        <state key="normal" image="calender"/>
-                                                        <connections>
-                                                            <action selector="viewScheduleButtonAction:" destination="Twz-0B-Wmx" eventType="touchUpInside" id="qad-Wa-sfW"/>
-                                                        </connections>
-                                                    </button>
-                                                </subviews>
-                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="trailing" secondItem="5vI-oW-GM8" secondAttribute="trailing" constant="20" id="8nd-kZ-wtY"/>
-                                                    <constraint firstItem="Q7p-Y1-dZ0" firstAttribute="centerY" secondItem="N6S-Xn-CcH" secondAttribute="centerY" id="9He-4U-O8C"/>
-                                                    <constraint firstItem="5vI-oW-GM8" firstAttribute="leading" secondItem="Q7p-Y1-dZ0" secondAttribute="trailing" constant="20" id="kRE-Mo-pUi"/>
-                                                    <constraint firstItem="5vI-oW-GM8" firstAttribute="centerY" secondItem="Q7p-Y1-dZ0" secondAttribute="centerY" id="pvC-01-Y72"/>
-                                                    <constraint firstItem="Q7p-Y1-dZ0" firstAttribute="leading" secondItem="N6S-Xn-CcH" secondAttribute="leading" constant="10" id="suB-n3-cIZ"/>
-                                                </constraints>
-                                            </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QMj-XI-4rT">
-                                                <rect key="frame" x="0.0" y="58" width="374" height="46"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="374" height="65.5"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="VIEW PET" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hrd-La-SiT">
-                                                        <rect key="frame" x="10" y="8" width="294" height="30"/>
+                                                        <rect key="frame" x="10" y="17.5" width="294" height="30"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="30" id="Pep-2f-OmR"/>
                                                         </constraints>
@@ -324,7 +324,7 @@
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nor-Yd-yqf">
-                                                        <rect key="frame" x="324" y="8" width="30" height="30"/>
+                                                        <rect key="frame" x="324" y="17.5" width="30" height="30"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="30" id="3Be-oZ-lIs"/>
                                                             <constraint firstAttribute="width" constant="30" id="xh5-nx-09y"/>
@@ -345,10 +345,10 @@
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KgT-Rw-bdP">
-                                                <rect key="frame" x="0.0" y="116" width="374" height="46"/>
+                                                <rect key="frame" x="0.0" y="77.5" width="374" height="65"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="VIEW SHELTER" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K1c-Af-sG4">
-                                                        <rect key="frame" x="10" y="8" width="294" height="30"/>
+                                                        <rect key="frame" x="10" y="17.5" width="294" height="30"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="30" id="cVn-zM-WkB"/>
                                                         </constraints>
@@ -357,7 +357,7 @@
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7CC-AI-QcO">
-                                                        <rect key="frame" x="324" y="8" width="30" height="30"/>
+                                                        <rect key="frame" x="324" y="17.5" width="30" height="30"/>
                                                         <constraints>
                                                             <constraint firstAttribute="width" constant="30" id="BJp-I2-ccz"/>
                                                             <constraint firstAttribute="height" constant="30" id="FcO-MA-Mrh"/>
@@ -378,10 +378,10 @@
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DNf-wO-gSa">
-                                                <rect key="frame" x="0.0" y="174" width="374" height="46"/>
+                                                <rect key="frame" x="0.0" y="154.5" width="374" height="65.5"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="CANCEL SHEDULE" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.80000001192092896" translatesAutoresizingMaskIntoConstraints="NO" id="6cC-ni-RqV">
-                                                        <rect key="frame" x="10" y="8" width="294" height="30"/>
+                                                        <rect key="frame" x="10" y="18" width="294" height="30"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="30" id="XwB-Nd-yqN"/>
                                                         </constraints>
@@ -390,7 +390,7 @@
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <button opaque="NO" tag="4" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="siv-f8-K8n">
-                                                        <rect key="frame" x="324" y="8" width="30" height="30"/>
+                                                        <rect key="frame" x="324" y="18" width="30" height="30"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="30" id="N5L-Sx-C6q"/>
                                                             <constraint firstAttribute="width" constant="30" id="nJN-S3-l0s"/>
@@ -989,12 +989,13 @@
                         <outlet property="lblTotalTimeTitle" destination="mVN-cP-QcW" id="7zP-Wl-iKq"/>
                         <outlet property="lblcardLastfourDigit" destination="pWF-c1-mJ8" id="Num-H4-reE"/>
                         <outlet property="lbldateTitle" destination="ZNj-bC-c8f" id="knV-dw-LpP"/>
+                        <outlet property="mapView" destination="Ejp-4g-GbZ" id="UHe-r8-QRT"/>
                         <outlet property="statusIconView" destination="odE-re-4HX" id="hy7-oD-yX0"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="f71-C6-AFQ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2901.449275362319" y="67.633928571428569"/>
+            <point key="canvasLocation" x="-3584" y="68"/>
         </scene>
         <!--Confirm ScheduleVC-->
         <scene sceneID="2FF-3I-xnb">
@@ -1499,9 +1500,9 @@
     </scenes>
     <resources>
         <image name="back_arrow" width="21" height="21"/>
-        <image name="calender" width="40" height="40"/>
         <image name="close" width="13" height="13"/>
         <image name="diamondinruff" width="154" height="117"/>
+        <image name="favouriteNew" width="512" height="512"/>
         <image name="option" width="40" height="40"/>
         <image name="view_profile" width="40" height="40"/>
         <image name="visa-card" width="40" height="40"/>
